--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+/*noinspection CssUnknownTarget*/
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+
 /* border box fix */
 html {
     box-sizing: border-box;
@@ -7,6 +10,205 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    margin: 0;
+    background-color: #f5f5f5;
+    color: #555;
+    font-family: 'Open Sans', sans-serif;
+}
+
+a {
+    text-decoration: none;
+}
+
+/*============================== HEADER =======================================*/
+
 header {
+    padding: 1em 0;
+    background: white;
     text-align: center;
 }
+
+header h1, header p {
+    margin: 0;
+}
+
+header p {
+    font-size: 0.8rem;
+}
+
+/*============================== MAIN =======================================*/
+
+main {
+    width: 100%;
+}
+
+.search_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 80%;
+    margin: 0 auto 3rem;
+}
+
+.search {
+    /*display: none;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 40%;
+    text-align: center;
+}
+
+.search label {
+    font-weight: 600;
+}
+
+.search input {
+    border-color: #eee;
+}
+
+.search input[type=text] {
+    align-self: stretch;
+}
+
+/*
+.search:nth-child(-n+2) {
+    display: flex;
+}
+*/
+
+.panel {
+    margin: 0 auto 2rem;
+    border: 1px solid #f1f1f1;
+    box-shadow: 1px 1px #ccc;
+    background-color: white;
+}
+
+.search_button {
+    flex-basis: 25%;
+    cursor: pointer;
+    font-weight: 700;
+    color: #ff0000;
+}
+
+.search_button:hover {
+    background: rgba(200, 200, 200, 0.1);
+}
+
+.results_container {  }
+
+.results_container h2 {
+    width: 90%;
+    margin: 0 auto 1em;
+}
+
+.result {
+    display: grid;
+    grid-template: 2em 1em 10em 2em / repeat(3, auto);
+    width: 90%;
+    padding-right: 1em;
+    background: #fff;
+}
+
+.result:hover {
+    cursor: pointer;
+}
+
+.image {
+    grid-column: 1/2;
+    grid-row: 1/5;
+    margin-right: 1em;
+}
+
+.title {
+    align-self: flex-end;
+    grid-column: 2/4;
+    grid-row: 1/2;
+    margin:0;
+    text-shadow: 1px 1px #999;
+}
+
+.release_date {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin:0;
+}
+
+.genre_ids {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    align-self: flex-end;
+    margin:0;
+    text-align: right;
+}
+
+.overview {
+    grid-column: 2/4;
+    grid-row: 3/4;
+    margin:1em;
+}
+
+.overview span {
+    display: inline-block;
+    color: red;
+    margin: 0 0.5em;
+}
+
+.original_language {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    margin:0;
+}
+
+.vote_average {
+    grid-column: 3/4;
+    grid-row: 4/5;
+    margin:0;
+    text-align: end;
+}
+
+.fa {
+    margin: 0 0.5em;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+}
+
+.pagination button {
+    margin: 5px;
+    padding: 5px 11px;
+    border-radius: 4px;
+    cursor: pointer;
+    color: #555;
+}
+
+.pagination button:hover {
+    background: rgba(200, 200, 200, 0.1);
+}
+
+.pagination button.page_selected {
+    background: #ff0000;
+    color: white;
+}
+
+/*============================== FOOTER =======================================*/
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 4.5rem;
+    background: #101010;
+}
+
+footer p {
+    flex-grow: 1;
+    max-width: 90%;
+    font-size: 0.75rem;
+}
+
+/*============================== Media Queries =======================================*/
+
