--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ main {
 }
 
 .search label {
+    align-self: stretch;
     font-weight: 600;
 }
 
@@ -201,26 +202,32 @@ main {
 
 /*============================== Details =======================================*/
 
+.noscroll {
+    overflow: hidden;
+}
+
 .details_container {
     display: none;
     position: fixed;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     font-size: 1.2rem;
     color: black;
+    /*ags*/
+    overflow: auto;
 }
 
 .details {
     display: grid;
-    grid-template: 100% / 40% 60%;
-    position: absolute;
+    align-items: center;
+    grid-template: 1fr / 40% 60%;
     background-color: rgba(200, 200, 200, 0.8);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    /*height: 100%;*/
+    min-height: 100%;
+    position: static;
+    /*overflow: auto;*/
 }
 
 .fa-times {
@@ -233,12 +240,10 @@ main {
 
 .details img {
     display: block;
-    align-self: center;
     margin: 0 auto;
 }
 
 .details div {
-    align-self: center;
     margin-right: 5rem;
 }
 
