--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,6 @@ header p {
 
 main {
     width: 100%;
-    /*
-    background: url('https://image.tmdb.org/t/p/w1280/aJn9XeesqsrSLKcHfHP4u5985hn.jpg');
-    background-position: top;
-    background-repeat: no-repeat;
-    */
 }
 
 .search_container {
@@ -63,19 +58,31 @@ main {
     align-items: center;
     flex-basis: 40%;
     text-align: center;
+    cursor: pointer;
 }
 
 .search:nth-child(-n+2) {
     display: flex;
 }
 
+.fa-toggle-off {
+    color: red;
+}
+
+.fa-toggle-on {
+    color: green;
+}
+
 .search label {
     align-self: stretch;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .search input {
+    padding: 0.3rem 1rem;
     border-color: #eee;
+    cursor: pointer;
 }
 
 .search input[type=text] {
@@ -215,7 +222,6 @@ main {
     left: 0;
     font-size: 1.2rem;
     color: black;
-    /*ags*/
     overflow: auto;
 }
 
@@ -224,17 +230,17 @@ main {
     align-items: center;
     grid-template: 1fr / 40% 60%;
     background-color: rgba(200, 200, 200, 0.8);
-    /*height: 100%;*/
     min-height: 100%;
     position: static;
-    /*overflow: auto;*/
 }
 
 .fa-times {
     position: absolute;
     top: 0;
     right: 0;
+    padding: 1rem;
     font-size: 3rem;
+    color: red;
     cursor: pointer;
 }
 
